# skatepong

./: .gitignore  README.md  install_skatepong_project.sh  install_skatepong_system.sh  ness_controller_skatepong.lyt  pyproject.toml  run_skatepong.sh  run_skatepong_dev_only.sh  update_skatepong.sh
code/src/: gyro.py  main.py
skatepong/: cli.py  constants.py  game.py  game_objects.py  gyro.py  main.py  tools.py
